# livekit-agents

./: poc.py  pyproject.toml  star_poc.sh  test_neurok_tts.py  test_neurok_tts_debug.py  test_neurok_tts_final.py  test_neurok_tts_synthesis.py
livekit-agents/livekit/agents/: worker.py
livekit-agents/livekit/agents/ipc/: proc_pool.py
livekit-agents/livekit/agents/voice/: agent.py
livekit-plugins/livekit-plugins-aws/livekit/plugins/aws/: llm.py
livekit-plugins/livekit-plugins-edge-tts/livekit/plugins/edge_tts/: tts.py
livekit-plugins/livekit-plugins-neurok-tts/: README.md  pyproject.toml
livekit-plugins/livekit-plugins-neurok-tts/livekit/plugins/neurok_tts/: __init__.py  log.py  models.py  py.typed  tts.py
livekit-plugins/livekit-plugins-neurok-tts/livekit/plugins/neurok_tts/TransformerTTS/: LICENSE  create_training_data.py  environment.yml  predict_tts.py  requirements.txt  train_tts.py
livekit-plugins/livekit-plugins-neurok-tts/livekit/plugins/neurok_tts/TransformerTTS/config/: training_config.yaml  training_config_wavernn.yaml
livekit-plugins/livekit-plugins-neurok-tts/livekit/plugins/neurok_tts/TransformerTTS/data/: audio.py  datasets.py
livekit-plugins/livekit-plugins-neurok-tts/livekit/plugins/neurok_tts/TransformerTTS/data/text/: __init__.py  tokenizer.py
livekit-plugins/livekit-plugins-neurok-tts/livekit/plugins/neurok_tts/TransformerTTS/model/: factory.py  layers.py  models.py
livekit-plugins/livekit-plugins-neurok-tts/livekit/plugins/neurok_tts/TransformerTTS/test_files/: aligner_test_sentences_est.txt  test_sentences_est.txt
livekit-plugins/livekit-plugins-neurok-tts/livekit/plugins/neurok_tts/TransformerTTS/tests/: test_loss.py
livekit-plugins/livekit-plugins-neurok-tts/livekit/plugins/neurok_tts/TransformerTTS/utils/: alignments.py  decorators.py  display.py  logging_utils.py  metrics.py  training_config_manager.py
livekit-plugins/livekit-plugins-neurok-tts/livekit/plugins/neurok_tts/tts_preprocess_et/: assets.py  convert.py  utils.py
livekit-plugins/livekit-plugins-neurok-tts/livekit/plugins/neurok_tts/tts_worker/: config.py  mq_consumer.py  synthesizer.py  utils.py
livekit-plugins/livekit-plugins-neurok-tts/livekit/plugins/neurok_tts/tts_worker/vocoding/: predictors.py
livekit-plugins/livekit-plugins-neurok-tts/livekit/plugins/neurok_tts/tts_worker/vocoding/hifigan/: models.py
livekit-plugins/livekit-plugins-whisper/livekit/plugins/whisper/: stt.py  whisper_stt.py
neurok-tts/: requirements.txt
neurok-tts/TransformerTTS/: .gitignore  README.md  checkpoints_to_weights.py  extract_durations.py  train_aligner.py
neurok-tts/TransformerTTS/config/: training_config_est.yaml
neurok-tts/TransformerTTS/data/: audio.py  datasets.py  metadata_readers.py
neurok-tts/TransformerTTS/data/text/: __init__.py  symbols.py  tokenizer.py
neurok-tts/TransformerTTS/model/: factory.py  layers.py  models.py  transformer_utils.py
neurok-tts/TransformerTTS/tests/: test_char_tokenizer.py
neurok-tts/TransformerTTS/utils/: alignments.py  argparser.py  logging_utils.py  losses.py  scripts_utils.py  training_config_manager.py
neurok-tts/config/: config.yaml
neurok-tts/tts_preprocess_et/: assets.py  convert.py
neurok-tts/tts_preprocess_et/data/: names.txt
neurok-tts/tts_worker/: config.py  synthesizer.py
neurok-tts/tts_worker/vocoding/: predictors.py
neurok-tts/tts_worker/vocoding/hifigan/: models.py  utils.py
