[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livekit-plugins-neurok-tts"
version = "1.0.0"
description = "Neurok TTS plugin for LiveKit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "LiveKit", email = "info@livekit.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "livekit-agents>=0.7.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.1.0",
    "isort>=5.10.0",
    "mypy>=0.931",
]

[project.urls]
"Homepage" = "https://github.com/livekit/agents"
"Bug Tracker" = "https://github.com/livekit/agents/issues"

[tool.setuptools]
packages = ["livekit.plugins.neurok_tts"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"livekit.plugins.neurok_tts" = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88