[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-neurok-tts"
dynamic = ["version"]
description = "Neurok TTS plugin for LiveKit"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9.0"
authors = [{ name = "LiveKit", email = "hello@livekit.io" }]
keywords = ["webrtc", "realtime", "audio", "video", "livekit", "whisper"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "livekit-agents>=0.7.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "nltk>=3.9.0",
    "tensorflow>=2.10.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.1.0",
    "isort>=5.10.0",
    "mypy>=0.931",
]
neurok = [
    "estnltk>=1.7.0",
    "phonemizer>=3.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "tqdm>=4.60.0",
]

[project.urls]
"Homepage" = "https://github.com/livekit/agents"
"Bug Tracker" = "https://github.com/livekit/agents/issues"


[tool.hatch.version]
path = "livekit/plugins/neurok_tts/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]
