[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-neurok-tts"
dynamic = ["version"]
description = "Neurok TTS plugin for LiveKit"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9.0"
authors = [{ name = "LiveKit", email = "hello@livekit.io" }]
keywords = ["webrtc", "realtime", "audio", "video", "livekit", "whisper"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "livekit-agents[codecs]>=0.7.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "nltk>=3.9.0",
    "tensorflow>=2.10.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ruamel.yaml>=0.16.6",
    "tf-keras>=2.15.0",
    "matplotlib>=3.2.2",
    "webrtcvad>=2.0.10",
    "phonemizer>=3.0.0",
    "pyworld>=0.3.4",
    "p_tqdm>=1.4.0",
    "pyyaml>=6.0.0",
    "pika>=1.3.0",
    "estnltk==1.7.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.1.0",
    "isort>=5.10.0",
    "mypy>=0.931",
]
neurok = [
    "estnltk>=1.7.0",
    "phonemizer>=3.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "tqdm>=4.60.0",
    "numba>=0.53.0",
]

[project.urls]
"Homepage" = "https://github.com/livekit/agents"
"Bug Tracker" = "https://github.com/livekit/agents/issues"


[tool.hatch.version]
path = "livekit/plugins/neurok_tts/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]
